--- a/index.html
+++ b/index.html
@@ -286,13 +286,13 @@
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQ1VvArgYxhHnm3brUS5zwNouPHi__KMqbYQ&s"
             />
-            Afiches
+            Proximamente
           </div>
           <div class="category-item" onclick="abrirModalProductos('mapas')">
             <img
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStd0Jxp-3sQOphoJ76_mNogxblxj4kd1Ulag&s"
             />
-            Mapas
+            Proximamente
           </div>
         </div>
       </div>
